2007-05-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun.el (shimbun-article-1): New function to support refresh.
	(shimbun-article): Use it.

	* sb-itmedia.el (shimbun-get-headers): Remove.

2007-05-02  Tsuyoshi CHO  <tsuyoshi_cho@ybb.ne.jp>

	* sb-engadget-ja.el (shimbun-engadget-ja-content-end): Add new regexp.

2007-04-27  Naohiro Aota  <nao.aota@gmail.com>

	* sb-slashdot-jp.el (shimbun-slashdot-jp-group-alist): Follow the
	change of news group name and URL.

	* sb-rss.el (shimbun-rss-get-headers): Support japanese-hankaku.

	* shimbun.el (shimbun-headers, shimbun-clear-contents): Simplify a bit.
	(shimbun-japanese-hankaku-region): Improve the way not to break
	paragraph start; don't insert a space between a zenkaku space and an
	ASCII character.

	* sb-ohmynews-jp.el (shimbun-ohmynews-jp-group-table): Add news group.
	(shimbun-index-url): Follow it.

2007-04-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-ohmynews-jp.el (toplevel): Use sb-rss.el.
	(shimbun-ohmynews-jp-top-level-domain)
	(shimbun-ohmynews-jp-from-address): Remove.
	(shimbun-ohmynews-jp-content-start)
	(shimbun-ohmynews-jp-content-end): Update.
	(shimbun-ohmynews-jp-group-table): Add watashi, style, it and local
	groups; remove science, books and all groups; rename kokusai and entame
	groups to kaigai and culture groups respectively.
	(shimbun-index-url): Update.
	(shimbun-get-headers): Remove.
	(shimbun-clear-contents): Rewrite.

2007-04-25  Tsuyoshi CHO  <tsuyoshi_cho@ybb.ne.jp>

	* sb-engadget-ja.el
	(shimbun-engadget-ja-content-start,shimbun-engadget-ja-content-end):
	Fix new regexp.

2007-04-24  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-sankei.el (shimbun-sankei-group-table): Add special.tamura group.
	(shimbun-clear-contents): Merge the :before method into the :around
	method (luna-define-method doesn't allow two or more methods for the
	identical parent function); remove adv for news.sports group; improve
	the cleaner for special.kiko group.
